--- a/lang/demo2024.en-US.xml
+++ b/lang/demo2024.en-US.xml
@@ -1,6 +1,6 @@
 <ew-language date="2024/1/22" id="en-US" author="e.World Technology Limited">
   <project>
-    <phrase id="bodytitle" value="Project Learning" />
+    <phrase id="bodytitle" value="Project Learning (alfa-release)" />
     <phrase id="footertext" value="&amp;copy;2024 Project Learning Team. All rights reserved." />
     <menu id="10087">
       <phrase id="menutext" value="Home" />
